tflab2/mysgingress-icmp.tf
# File generated by aws2tf see https://github.com/awsandy/aws2tf
# aws_security_group_rule.sg-0c991999e3313704a-2:
resource "aws_security_group_rule" "mysgingress-icmp" {
  count = var.mycount
  cidr_blocks = [
    "10.0.0.0/16",
    for avpc in var.aws_vpc :
    lookup(var.aws_cidr, avpc)
    
  ]
  from_port         = -1
  ipv6_cidr_blocks  = []
  prefix_list_ids   = []
  protocol          = "icmp"
  security_group_id = aws_security_group.mysg[count.index].id
  self              = false
  to_port           = -1
  type              = "ingress"
}
